@@ -199,6 +199,12 @@ namespace Orthanc
                           const DicomTag& tag,
                           IdentifierConstraintType type,
                           const std::string& value);
+
+    void LookupIdentifierRange(std::list<int64_t>& result,
+                               ResourceType level,
+                               const DicomTag& tag,
+                               const std::string& start,
+                               const std::string& end);
   };
 }
 
